fixed inputs on IE

--- a/src/app/positions-table/positions-table.component.scss
+++ b/src/app/positions-table/positions-table.component.scss
@@ -86,6 +86,7 @@
       }
 
       input {
+        box-sizing: border-box;
         background: $white;
         border: none;
         height: 100%;
